Fix: safari browser UI overlaps header menu buttons

--- a/src/components/Layout/Header/style.scss
+++ b/src/components/Layout/Header/style.scss
@@ -134,6 +134,19 @@
     
     &__inner {
         height: 100%;
+        
+        position: absolute;
+        right: 0;
+
+        pointer-events: all;
+        transform: translateX(100%);
+        background-color: $Coal;
+
+        transition: transform 0.3s cubic-bezier(0.4, 0, 0, 1);
+    }
+
+    &__content {
+        height: 100svh;
         padding-top: 6px;
         padding-right: 6px;
         padding-left: 24px;
@@ -143,18 +156,10 @@
         flex-direction: column;  
         align-items: flex-start;
 
-        position: absolute;
-        right: 0;
-
         overflow-y: auto;
         overflow-x: hidden;
-
-        pointer-events: all;
-        transform: translateX(100%);
-        background-color: $Coal;
-
-        transition: transform 0.3s cubic-bezier(0.4, 0, 0, 1);
     }
+
     & .button {
         width: 180px;
     }
