--- a/src/components/PromoBlock/style.scss
+++ b/src/components/PromoBlock/style.scss
@@ -169,8 +169,7 @@
 @media (max-width: 700px) {
     .promoBlock {
         height: auto;
-        min-height: calc(100svh - 150px);
-
+    
         padding-top: 72px;
         padding-left: 16px;
         padding-right: 16px;
